수정 파일 반영

--- a/01.StartingCode/index.html
+++ b/01.StartingCode/index.html
@@ -11,6 +11,9 @@
   <body>
     <div id="app">
       <h1>{{ product }}</h1>
+      <div class="product-image">
+        <!-- image goes here -->
+      </div>
     </div>
 
     <!-- Import Js -->
