--- a/01.StartingCode/index.html
+++ b/01.StartingCode/index.html
@@ -10,18 +10,29 @@
   </head>
   <body>
     <div id="app">
-      <h1>{{ product }}</h1>
-      <div class="product-image">
-        <!-- image goes here -->
+      <div class="nav-bar"></div>
+      
+      <div class="product-display">
+        <div class="product-container">
+          <div class="product-image">
+            <img v-bind:src="image">
+          </div>
+          <div class="product-info">
+            <h1>{{ product }}</h1>
+            <p v-if="inventory > 10">In Stock</p>
+            <p v-else-if="inventory <= 10 && inventory > 0">Almost Sold Out!</p>
+            <p v-else>Out of Stock</p>
+          </div>
+        </div>
       </div>
     </div>
 
-    <!-- Import Js -->
+    <!-- Import App -->
     <script src="./main.js"></script>
-    
+
     <!-- Mount App -->
     <script>
-        const mountedApp = app.mount('#app')
+      const mountedApp = app.mount('#app')
     </script>
   </body>
 </html>
